--- a/index.html
+++ b/index.html
@@ -1,4 +1,48 @@
-I wonder.
-<br/>
-<br/>
-pgp: <a href="5B736DB6.asc">5B736DB6</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>Masih Hajiarab Derkani</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+
+</head>
+<body>
+<h1>Masih Hajiarab Derkani</h1>
+<p><img src="i.jpg" alt="I" /></p>
+<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a>, business platform services. I currently work on a highly resilient distributed message dissemination system with guaranteed sequential consistency and at-least-once delivery.</p>
+<p>Previously, I was a postdoctoral research fellow at the university of St Andrews, school of Computer Science. I worked with <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a> on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
+<p>In <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I investigated algorithmic adaptation of routing state maintenance in structured Peer-to-Peer (P2P) overlays, where the scope of adaptation is enlarged to include the maintenance algorithm itself rather than being limited to the parameter values of a single algorithm. I confirmed the hypothesis that a <a class="externalLink" href="http://en.wikipedia.org/wiki/Key-based_routing">Key-based Routing (KBR)</a> system can automatically and dynamically adapt the structure of its maintenance algorithm to changing environments, and can do so in a fully decentralised manner without any human intervention, and outperform static KBR systems such as <a class="externalLink" href="http://en.wikipedia.org/wiki/Chord_(peer-to-peer)">Chord</a> in terms of performance and resource consumption, i.e. lookup correctness, lookup latency and bandwidth usage. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a>. My work was generously funded by <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>.</p>
+<p>Prior to my PhD, I received my MSc in &#x201c;Advanced Computer Science&#x201d; from the university of St. Andrews. My Master&#x2019;s thesis, titled &#x201c;Trombone: A Zero-Hop, Zero-Configuration Peer-to-Peer Routing Algorithm&#x201d;, was supervised by <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>, which led to my PhD studies. I was kindly awarded the 2010 Master&#x2019;s class medal.</p>
+<p>My research interests include distributed systems, P2P systems, software architecture/engineering, autonomic computing and unsupervised machine learning.</p>
+<div class="section">
+<h2><a name="Projects"></a>Projects</h2>
+<p>A shortlist of my projects:</p>
+
+<ul>
+  
+<li><a class="externalLink" href="http://trombone.cs.st-andrews.ac.uk">Trombone</a> &#x2013; an adaptive P2P overlay.</li>
+  
+<li><a class="externalLink" href="http://shabdiz.cs.st-andrews.ac.uk">Shabdiz</a> &#x2013; a lightweight distributed application monitoring and management framework.</li>
+  
+<li><a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a> &#x2013; a distributed delay-tolerant content delivery platform powered by renewable energies.</li>
+  
+<li><a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a> &#x2013; a project constructing a linked genealogy of Scottish historical records.</li>
+  
+<li><a class="externalLink" href="https://github.com/masih/jetson">Jetson</a> &#x2013; an asynchronous RPC framework based on <a class="externalLink" href="http://netty.io">netty</a> with automatic Java proxy generation.</li>
+</ul>
+<p>More <a class="externalLink" href="https://github.com/masih">here</a>, and <a class="externalLink" href="https://quicksilver-public.hg.cs.st-andrews.ac.uk/">here</a>.</p>
+</div>
+<div class="section">
+<h2><a name="Teaching"></a>Teaching</h2>
+<p>I delivered the <a class="externalLink" href="https://info.cs.st-andrews.ac.uk/student-handbook/modules/CS5033.html">CS5033 Software Architecture</a> module in 2014/15 second semester.</p>
+<p>I regularly delivered talks on code quality. I have been a teaching assistant for numerous modules during my PhD.</p>
+</div>
+<div class="section">
+<h2><a name="Contact"></a>Contact</h2>
+<p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
+<footer>
+    Last updated:  Sat. 24 December 2016
+</footer>
+</body>
+</html>
