--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Masih Hajiarab Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a>, business platform services. I currently work on a resilient distributed message dissemination system with guaranteed sequential consistency and at-least-once delivery.</p>
+<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a>, business platform services. I currently work on a resilient distributed message dissemination system that guarantees sequential consistency and at-least-once delivery.</p>
 
 <p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">university of St Andrews, school of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
 
@@ -31,22 +31,21 @@
   
 <li><a class="externalLink" href="http://shabdiz.cs.st-andrews.ac.uk">Shabdiz</a> &#x2013; a lightweight distributed application monitoring and management framework.</li>
   
-<li><a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a> &#x2013; a project constructing a linked genealogy of Scottish historical records.</li>
-  
 <li><a class="externalLink" href="https://github.com/masih/jetson">Jetson</a> &#x2013; an asynchronous RPC framework based on <a class="externalLink" href="http://netty.io">netty</a> with automatic Java proxy generation.</li>
 </ul>
+
 <p>More <a class="externalLink" href="https://github.com/masih">here</a>, and <a class="externalLink" href="https://quicksilver-public.hg.cs.st-andrews.ac.uk/">here</a>.</p>
+
 </div>
-<div class="section">
-<h2><a name="Teaching"></a>Teaching</h2>
-<p>I delivered the <a class="externalLink" href="https://info.cs.st-andrews.ac.uk/student-handbook/modules/CS5033.html">CS5033 Software Architecture</a> module in 2014/15 second semester.</p>
-<p>I regularly delivered talks on code quality. I have been a teaching assistant for numerous modules during my PhD.</p>
-</div>
+
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
+
+<p>I am not on social media, nor LinkedIn and similar websites. Email is the best way to get in touch with me.</p>
+
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
-    Last updated:  Sat. 24 December 2016
+    Last updated:  Sun. 25 December 2016
 </footer>
 </body>
 </html>
