--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
 
-<p>I am not on social media, nor LinkedIn and similar websites. Email is the best way to get in touch with me.</p>
+<p>I am not a member of FaceBook, Twitter, LinkedIn and such websites. Email is the best way to get in touch.</p>
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
