--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <h1>Masih Hajiarab Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a>, business platform services. I currently work on a resilient distributed message dissemination system that guarantees sequential consistency and at-least-once delivery.</p>
+<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
 
-<p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">university of St Andrews, school of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
+<p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
 
 <p>Prior to that, I worked on <a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a>, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
-<p>In <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied algorithmic adaptation of routing state maintenance in structured Peer-to-Peer (P2P) overlays, where the scope of adaptation is enlarged to include the maintenance algorithm itself rather than being limited to the parameter values of a single algorithm. My thesis illustrates a <a class="externalLink" href="http://en.wikipedia.org/wiki/Key-based_routing">Key-based Routing (KBR)</a> system that automatically and dynamically adapts the structure of its maintenance algorithm under varying workload and churn patterns, and outperforms KBR systems with a fixed maintenance algorithm such as <a class="externalLink" href="http://en.wikipedia.org/wiki/Chord_(peer-to-peer)">Chord</a> in terms of lookup correctness, lookup latency and bandwidth consumption. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>.</p>
+<p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied algorithmic adaptation of routing state maintenance in structured Peer-to-Peer (P2P) overlays, where the scope of adaptation is enlarged to include the maintenance algorithm itself rather than being limited to the parameter values of a single algorithm. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>.</p>
 
-<p>Prior to my PhD, I received my MSc in &#x201c;Advanced Computer Science&#x201d; from the university of St Andrews. My Master&#x2019;s thesis, titled &#x201c;Trombone: A Zero-Hop, Zero-Configuration Peer-to-Peer Routing Algorithm&#x201d;, was supervised by <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>, which led to my PhD studies. I was kindly awarded the 2010 Master&#x2019;s class medal.</p>
+<p>Prior to my PhD, I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews. My Master&#x2019;s thesis, entitled &#x201c;Trombone: A Zero-Hop, Zero-Configuration Peer-to-Peer Routing Algorithm&#x201d;, was supervised by <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>.</p>
 
 <div class="section">
 <h2><a name="Projects"></a>Projects</h2>
@@ -41,7 +41,7 @@
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
 
-<p>I am not a member of FaceBook, Twitter, LinkedIn and such websites. Email is the best way to get in touch.</p>
+<p>I am not a member of Facebook, Twitter, LinkedIn and such websites. Email is the best way to get in touch.</p>
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
