--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Masih Hajiarab Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am a software engineer at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
+<p>I am a computer scientist at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
 
 <p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
 
