--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
-    Last updated:  Fri. 6 January 2017
+    Last updated: 1st February 2017
 </footer>
 </body>
 </html>
