--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <h1>Masih Hajiarab Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am a computer scientist at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
+<p>I am a computer scientist at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient large-scale distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
 
 <p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
 
 <p>Prior to that, I worked on <a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a>, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
-<p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>.</p>
+<p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>. During my time as a research student I tutored for various modules, delivered annual talks to students on good programming practices, and lectured on Software Architecture.</p>
 
-<p>Prior to my PhD, I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews. My Master&#x2019;s thesis, entitled &#x201c;Trombone: A Zero-Hop, Zero-Configuration Peer-to-Peer Routing Algorithm&#x201d;, was supervised by <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>.</p>
+<p>Prior to my PhD, I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews. In my Master&#x2019;s thesis I studied trusted gossip in P2P overlays that strive to maintain complete state of the network at the presence of byzantine nodes.</p>
+
+<p>I have a background in Mathematics and Physics, with experience in building large-scale financial and e-commerce systems.</p>
 
 <div class="section">
 <h2><a name="Projects"></a>Projects</h2>
@@ -45,7 +47,7 @@
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
-    Last updated: 1<sup>st</sup> February 2017
+    Last updated: 4<sup>th</sup> February 2017
 </footer>
 </body>
 </html>
