--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <p>I am a computer scientist at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient large-scale distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
 
-<p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855.</p>
+<p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
 
 <p>Prior to that, I worked on <a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a>, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
