--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>. During my time as a research student I tutored for various modules, delivered annual talks to students on good programming practices, and lectured on Software Architecture.</p>
 
-<p>Prior to my PhD, I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews. In my Master&#x2019;s thesis I studied trusted gossip in P2P overlays that strive to maintain complete state of the network at the presence of byzantine nodes.</p>
+<p>I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews in 2010. For my Master&#x2019;s thesis I studied trusted gossip in P2P overlays that strive to maintain complete state of the network at the presence of byzantine nodes.</p>
 
 <p>I have a background in Mathematics and Physics, with experience in building large-scale financial and e-commerce systems.</p>
 
@@ -43,7 +43,7 @@
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
 
-<p>I am not a member of Facebook, Twitter, LinkedIn and such websites. Email is the best way to get in touch.</p>
+<p>I am not on social media. Email is the best way to get in touch.</p>
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
