Update links to st Andrews system research

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
 <ul>
   
-<li><a class="externalLink" href="http://trombone.cs.st-andrews.ac.uk">Trombone</a> &#x2013; an adaptive P2P overlay.</li>
+<li><a class="externalLink" href="https://github.com/stacs-srg/trombone">Trombone</a> &#x2013; an adaptive P2P overlay.</li>
   
-<li><a class="externalLink" href="http://shabdiz.cs.st-andrews.ac.uk">Shabdiz</a> &#x2013; a lightweight distributed application monitoring and management framework.</li>
+<li><a class="externalLink" href="https://github.com/stacs-srg/shabdiz">Shabdiz</a> &#x2013; a lightweight distributed application monitoring and management framework.</li>
   
 <li><a class="externalLink" href="https://github.com/masih/jetson">Jetson</a> &#x2013; an asynchronous RPC framework based on <a class="externalLink" href="http://netty.io">netty</a> with automatic Java proxy generation.</li>
 </ul>
 
-<p>More <a class="externalLink" href="https://github.com/masih">here</a>, and <a class="externalLink" href="https://quicksilver-public.hg.cs.st-andrews.ac.uk/">here</a>.</p>
+<p>More <a class="externalLink" href="https://github.com/masih">here</a>, and <a class="externalLink" href="https://github.com/stacs-srg/">here</a>.</p>
 
 </div>
 
