Update seemingly ancient info index page.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
 
-    <title>Masih Hajiarab Derkani</title>
+    <title>Masih H. Derkani</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 
 </head>
 <body>
-<h1>Masih Hajiarab Derkani</h1>
+<h1>Masih H. Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am a computer scientist at <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services. I am currently working on a resilient large-scale distributed message dissemination system which guarantees sequential consistency and at-least-once delivery.</p>
+<p>I am the principal architect of Data Platform at <a class="externalLink" href="https://www.solarwindsmsp.com">SolarWinds MSP</a>.</p>
 
-<p>Previously, I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
+<p>Previously, I worked on the distributed messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient system that guarantees sequential consistency and at-least-once delivery.</p>
+
+<p>I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
 
 <p>Prior to that, I worked on <a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a>, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
@@ -25,29 +27,16 @@
 
 <div class="section">
 <h2><a name="Projects"></a>Projects</h2>
-<p>A shortlist of my projects:</p>
-
-<ul>
-  
-<li><a class="externalLink" href="https://github.com/stacs-srg/trombone">Trombone</a> &#x2013; an adaptive P2P overlay.</li>
-  
-<li><a class="externalLink" href="https://github.com/stacs-srg/shabdiz">Shabdiz</a> &#x2013; a lightweight distributed application monitoring and management framework.</li>
-  
-<li><a class="externalLink" href="https://github.com/masih/jetson">Jetson</a> &#x2013; an asynchronous RPC framework based on <a class="externalLink" href="http://netty.io">netty</a> with automatic Java proxy generation.</li>
-</ul>
-
-<p>More <a class="externalLink" href="https://github.com/masih">here</a>, and <a class="externalLink" href="https://github.com/stacs-srg/">here</a>.</p>
+<p>A shortlist of my projects can be found <a class="externalLink" href="https://github.com/masih">here</a> and <a class="externalLink" href="https://github.com/stacs-srg/">here</a>.</p>
 
 </div>
 
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
 
-<p>I am not on social media. Email is the best way to get in touch.</p>
-
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
-    Last updated: 17<sup>th</sup> February 2017
+    Last updated: 27<sup>th</sup> January 2019
 </footer>
 </body>
 </html>
