--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <title>Masih H. Derkani</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="keywords" content="masih, derkani" />
     <link rel="stylesheet" type="text/css" href="style.css"/>
 
 </head>
