--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>I am the principal architect of Data Platform at <a class="externalLink" href="https://www.solarwindsmsp.com">SolarWinds MSP</a>.</p>
 
-<p>Previously, I worked on the distributed messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient system that guarantees sequential consistency and at-least-once delivery.</p>
+<p>Previously, I worked on the messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient distributed system that guarantees sequential consistency and at-least-once delivery.</p>
 
 <p>I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
 
