Update org move

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Masih H. Derkani</h1>
 <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am the principal architect of Data Platform at <a class="externalLink" href="https://www.solarwindsmsp.com">SolarWinds MSP</a>.</p>
+<p>I am principal architect at <a class="externalLink" href="https://www.solarwinds.com">SolarWinds</a> Technology Strategy team.</p>
 
 <p>Previously, I worked on the messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient distributed system that guarantees sequential consistency and at-least-once delivery.</p>
 
@@ -37,7 +37,7 @@
 
 <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
 <footer>
-    Last updated: 27<sup>th</sup> January 2019
+    Last updated: 1<sup>st</sup> March 2020
 </footer>
 </body>
 </html>
