Remove expired link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <p>I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
 
-<p>Prior to that, I worked on <a class="externalLink" href="http://qraqrbox.com">Qraqrbox</a>, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
+<p>Prior to that, I worked on Qraqrbox, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
 <p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>. During my time as a research student I tutored for various modules, delivered annual talks to students on good programming practices, and lectured on Software Architecture.</p>
 
