--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="section">
 <h2><a name="Contact"></a>Contact</h2>
 
-<p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="5B736DB6.asc">5B736DB6</a></p></div>
+<p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="https://keybase.io/masiih">keybase</a></p></div>
 <footer>
     Last updated: 1<sup>st</sup> March 2020
 </footer>
