--- a/index.html
+++ b/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
 
     <title>Masih H. Derkani</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="keywords" content="masih, derkani" />
     <link rel="stylesheet" type="text/css" href="style.css"/>
 
-</head>
-<body>
-<h1>Masih H. Derkani</h1>
-<p><img src="i.jpg" alt="I" /></p>
+  </head>
+  <body>
+    <h1>Masih H. Derkani</h1>
+    <p><img src="i.jpg" alt="I" /></p>
 
-<p>I am principal architect at <a class="externalLink" href="https://www.solarwinds.com">SolarWinds</a> Technology Strategy team.</p>
+    <p>I am principal architect at <a class="externalLink" href="https://www.solarwinds.com">SolarWinds</a> Technology Strategy team.</p>
 
-<p>Previously, I worked on the messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient distributed system that guarantees sequential consistency and at-least-once delivery.</p>
+    <p>Previously, I worked on the messaging backbone of <a class="externalLink" href="https://www.adobe.com">Adobe</a> business platform services, a highly resilient distributed system that guarantees sequential consistency and at-least-once delivery.</p>
 
-<p>I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
+    <p>I was a postdoctoral research fellow at the <a class="externalLink" href="http://www.cs.st-andrews.ac.uk">University of St Andrews, School of Computer Science</a>, working on <a class="externalLink" href="http://digitisingscotland.cs.st-andrews.ac.uk/index.html">Digitising Scotland</a>, a project constructing a linked genealogy of 24 million Scottish historical records since 1855 using supervised machine learning.</p>
 
-<p>Prior to that, I worked on Qraqrbox, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
+    <p>Prior to that, I worked on Qraqrbox, a university spin-off company that provides a distributed delay-tolerant content delivery platform powered by renewable energies.</p>
 
-<p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>. During my time as a research student I tutored for various modules, delivered annual talks to students on good programming practices, and lectured on Software Architecture.</p>
+    <p>For <a class="externalLink" href="http://hdl.handle.net/10023/6761">my PhD</a>, I studied adaptive self-configuring gossip algorithms in structured Peer-to-Peer (P2P) overlays. I had the privilege of completing my PhD under the supervision of <a class="externalLink" href="http://graham.host.cs.st-andrews.ac.uk/">Dr. Graham Kirby</a> and <a class="externalLink" href="http://al.host.cs.st-andrews.ac.uk/">Prof. Alan Dearle</a>. My study was generously funded by the <a class="externalLink" href="http://www.sicsa.ac.uk/">Scottish Informatics and Computer Science Alliance (SICSA)</a>. During my time as a research student I tutored for various modules, delivered annual talks to students on good programming practices, and lectured on Software Architecture.</p>
 
-<p>I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews in 2010. For my Master&#x2019;s thesis I studied trusted gossip in P2P overlays that strive to maintain complete state of the network at the presence of byzantine nodes.</p>
+    <p>I received my MSc in <i>Advanced Computer Science</i> from the University of St Andrews in 2010. For my Master&#x2019;s thesis I studied trusted gossip in P2P overlays that strive to maintain complete state of the network at the presence of byzantine nodes.</p>
 
-<p>I have a background in Mathematics and Physics, with experience in building large-scale financial and e-commerce systems.</p>
+    <p>I have a background in Mathematics and Physics, with experience in building large-scale financial and e-commerce systems.</p>
 
-<div class="section">
-<h2><a name="Projects"></a>Projects</h2>
-<p>A shortlist of my projects can be found <a class="externalLink" href="https://github.com/masih">here</a> and <a class="externalLink" href="https://github.com/stacs-srg/">here</a>.</p>
+    <div class="section">
+      <h2><a name="Talks"></a>Talks</h2>
+      <ul>
+          <li><a href="https://www.confluent.io/resources/kafka-summit-2020/gdpr-compliance-transparent-handing-of-personally-identifiable-information-in-event-driven-systems/">GDPR Compliance: Transparent Handing of PII in Event-Driven Systems</a>
+              <p>Kafka Summit, Virtual Event, 2020</p>
+          </li>
+          <li><a href="https://kafka-summit.org/sessions/native-event-driven-data-ecosystem-powered-kafka-akka/">Cloud-native Event-driven Data Ecosystem Powered by Kafka and Akka</a>
+              <p>Kafka Summit, London, 2019</p>
+          </li>
+      </ul>
+    </div>
 
-</div>
+    <div class="section">
+      <h2><a name="Projects"></a>Projects</h2>
+      <p>A shortlist of my projects can be found <a class="externalLink" href="https://github.com/masih">here</a> and <a class="externalLink" href="https://github.com/stacs-srg/">here</a>.</p>
+    </div>
 
-<div class="section">
-<h2><a name="Contact"></a>Contact</h2>
-
-<p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="https://keybase.io/masiih">keybase</a></p></div>
-<footer>
-    Last updated: 1<sup>st</sup> March 2020
-</footer>
-</body>
+    <div class="section">
+      <h2><a name="Contact"></a>Contact</h2>
+      <p><a class="externalLink" href="mailto:m@derkani.org">m@derkani.org</a><br /><a href="https://keybase.io/masiih">keybase</a></p>
+    </div>
+    <footer>
+      Last updated: 16<sup>th</sup> August 2020
+    </footer>
+  </body>
 </html>
