Add Cloudflare analytics

--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <footer>
       Last updated: 16<sup>th</sup> August 2020
     </footer>
+    
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f264dacf8a674207bf2a5aec649be06a"}'></script><!-- End Cloudflare Web Analytics -->
+    
   </body>
 </html>
