Add latest talks

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=DLCTEXbF1Es">State of Content Routing: Network Indexer</a>
+            <p>IPFS Camp, Portugal, 2022</p>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=ch_yF_hCfF8">How to be an Index Provider</a>
+            <p>IPFS þing, Iceland, 2022</p>
+        </li>
+        <li>
             <a href="https://www.confluent.io/resources/kafka-summit-2020/gdpr-compliance-transparent-handing-of-personally-identifiable-information-in-event-driven-systems/">GDPR
                 Compliance: Transparent Handing of PII in Event-Driven Systems</a>
             <p>Kafka Summit, Virtual Event, 2020</p>
@@ -53,7 +61,7 @@
 </div>
 
 <footer>
-    Last updated: 24<sup>th</sup> December 2021
+    Last updated: 1<sup>st</sup> January 2023
 </footer>
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f264dacf8a674207bf2a5aec649be06a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
