Add Burssels talks

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=_EDJXeDtcX4">IPNI: the InterPlanetary Network Indexer</a>
+            <p>IPFS þing, Brussels, 2023</p>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=CPlOdNqJ8og">cid.contact: one year on</a>
+            <p>IPFS þing, Brussels, 2023</p>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=oe7fjOl-q0s">Introduction to Content Routing</a>
+            <p>IPFS þing, Brussels, 2023</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=DLCTEXbF1Es">State of Content Routing: Network Indexer</a>
             <p>IPFS Camp, Portugal, 2022</p>
         </li>
@@ -61,7 +73,7 @@
 </div>
 
 <footer>
-    Last updated: 1<sup>st</sup> January 2023
+    Last updated: 14<sup>th</sup> September 2023
 </footer>
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f264dacf8a674207bf2a5aec649be06a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
