Add Protocol Berg talk
Pending the recording release.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://watch.protocol.berlin/ethberlin/protocol_berg/speakers/masih_derkani">Indexing the Planet; for good</a>
+            <p>Protocol Berg, Berlin, 2023</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=_EDJXeDtcX4">IPNI: the InterPlanetary Network Indexer</a>
             <p>IPFS þing, Brussels, 2023</p>
         </li>
