Add fildev talks

--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=ndLKjXQ1awI">CommPact: Elevating Arbitrary Filecoin Pieces to IPFS Compatible Blocks</a>
+            <p>FilDev Summit, Reykjavík, 2023</p>
+        </li>
+        <li>
+            <a href="https://youtu.be/wrgsi-Us2zg">IPNI for Retrievals</a>
+            <p>FilDev Summit, Reykjavík, 2023</p>
+        </li>
+        <li>
+            <a href="https://youtu.be/9E8dkaHvnag">DeStor REST API: Propelling Data onto Filecoin</a>
+            <p>FilDev Summit, Reykjavík, 2023</p>
+        </li>
+        <li>
             <a href="https://watch.protocol.berlin/ethberlin/protocol_berg/session/indexing_the_planet_for_good">Indexing the Planet; for good</a>
             <p>Protocol Berg, Berlin, 2023</p>
         </li>
         <li>
             <a href="https://www.youtube.com/watch?v=_EDJXeDtcX4">IPNI: the InterPlanetary Network Indexer</a>
-            <p>IPFS þing, Brussels, 2023</p>
+            <p>IPFS þing, Belgium, 2023</p>
         </li>
         <li>
             <a href="https://www.youtube.com/watch?v=CPlOdNqJ8og">cid.contact: one year on</a>
@@ -36,7 +48,7 @@
         </li>
         <li>
             <a href="https://www.youtube.com/watch?v=ch_yF_hCfF8">How to be an Index Provider</a>
-            <p>IPFS þing, Iceland, 2022</p>
+            <p>IPFS þing, Reykjavík, 2022</p>
         </li>
         <li>
             <a href="https://www.confluent.io/resources/kafka-summit-2020/gdpr-compliance-transparent-handing-of-personally-identifiable-information-in-event-driven-systems/">GDPR
