Add Brussels F3 talk

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=UpLnwT8e6cI">Fast Finality: Simplifying Bridges to Other Networks</a>
+            <p>FilDev Summit, Brussels, 2024</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=ndLKjXQ1awI">CommPact: Elevating Arbitrary Filecoin Pieces to IPFS Compatible Blocks</a>
             <p>FilDev Summit, Reykjavík, 2023</p>
         </li>
