--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=OVb7euwJGBg">IPNI: A federated pathfinder to just about any CID</a>
+            <p>IPFS Camp, Brussels, 2024</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=UpLnwT8e6cI">Fast Finality: Simplifying Bridges to Other Networks</a>
             <p>FilDev Summit, Brussels, 2024</p>
         </li>
