--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>FilDev Summit, Reykjavík, 2023</p>
         </li>
         <li>
-            <a href="https://watch.protocol.berlin/ethberlin/protocol_berg/session/indexing_the_planet_for_good">Indexing the Planet; for good</a>
+            <a href="https://www.youtube.com/watch?v=OWkvXFkPDgU">Indexing the Planet; for good</a>
             <p>Protocol Berg, Berlin, 2023</p>
         </li>
         <li>
