Add fildev 2025 talk

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://www.youtube.com/watch?v=CZ_QTWQP3Os">F3 Aware Lotus APIs and What It Means For You</a>
+            <p>FilDev Summit, Virtual Event, 2025</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=OVb7euwJGBg">IPNI: A federated pathfinder to just about any CID</a>
             <p>IPFS Camp, Brussels, 2024</p>
         </li>
