Add protocol berg v2 talk

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>Talks</h2>
     <ul>
         <li>
+            <a href="https://youtu.be/b2ebL9zaOwA">From Hours to Minutes The Journey of Fast Finality on Filecoin</a>
+            <p>Protocol Berg v2, Berlin, 2025</p>
+        </li>
+        <li>
             <a href="https://www.youtube.com/watch?v=CZ_QTWQP3Os">F3 Aware Lotus APIs and What It Means For You</a>
             <p>FilDev Summit, Virtual Event, 2025</p>
         </li>
